--- a/README
+++ b/README
@@ -5,8 +5,8 @@ node-mecab
 使い方はtest.jsを見れば一発です。使い方は今のところその一通りのみです。
 
 コンパイル方法:
-$ node-waf configure build
+$ node-gyp configure build
 
-あとは"./build/default/mecab.node"を適当にコピーして使ってください(やっつけですみません)。
+あとは"./build/Release/mecab.node"を適当にコピーして使ってください(やっつけですみません)。
 
-# これをforkしてpackage.jsonくっつけてnpmにでも投げてくれる人が現れないかなー(ﾎﾞｿｯ
+適宜Mecabのライブラリファイルのパスを ./binding.gyp に指定する必要があります。（デフォルトはMac/Homebrew環境）
